# Upsilon.Apps.Passkey

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Upsilon.Apps.Passkey.Core.sln  Upsilon.Apps.Passkey.Linux.slnx  Upsilon.Apps.Passkey.Windows.slnx  Upsilon.Apps.Passkey.sln  Upsilon.Apps.Passkey.slnx
.github/workflows/: csharp-dotnet-linux.yml  csharp-dotnet-windows.yml  csharp-dotnet.yml  dotnet.yml
Core/: CMakeLists.txt  ClassDiagram.cd  Core.csproj  Upsilon.Apps.PassKey.Core.csproj  Upsilon.Apps.Passkey.Core.csproj
Core/Abstraction/Enums/: AccountOption.cs  AutoSaveMergeBehavior.cs  WarningType.cs
Core/Abstraction/Events/: AutoSaveDetectedEventArgs.cs  WarningDetectedEventArgs.cs
Core/Abstraction/Interfaces/: IAccount.cs  ICryptographyCenter.cs  IDatabase.cs  IItem.cs  ILog.cs  ISerializationCenter.cs  IService.cs  IUser.cs  IWarning.cs
Core/Enums/: AccountOption.cs  AutoSaveMergeBehavior.cs  ChangeType.cs  WarningType.cs
Core/Events/: AutoSaveDetectedEventArgs.cs  LogoutEventArgs.cs  WarningDetectedEventArgs.cs
Core/Implementation/Enums/: ChangeType.cs
Core/Implementation/Interfaces/: IChangable.cs
Core/Implementation/Models/: Account.cs  AutoSave.cs  Change.cs  Database.cs  Log.cs  Service.cs  User.cs  Warning.cs
Core/Implementation/Utils/: CryptographyCenter.cs  Exceptions.cs  FileLocker.cs  JsonSerializationCenter.cs  LogCenter.cs  PasswordGenerator.cs  StaticMethods.cs
Core/Interfaces/: IAccount.cs  IChangable.cs  ICryptographicCenter.cs  ICryptographyCenter.cs  IDatabase.cs  IItem.cs  ILog.cs  IPasswordFactory.cs  ISerializationCenter.cs  IService.cs  IUser.cs  IWarning.cs
Core/Internal/Models/: Account.cs  AutoSave.cs  Change.cs  Database.cs  Log.cs  Service.cs  User.cs  Warning.cs
Core/Internal/Utils/: CryptographyCenter.cs  Exceptions.cs  FileLocker.cs  ImportExportHelper.cs  JsonSerializationCenter.cs  LogCenter.cs  PasswordGenerator.cs  StaticMethods.cs
Core/Models/: Account.cs  AccountOption.cs  Activity.cs  AutoSave.cs  Change.cs  ChangeType.cs  Database.cs  Log.cs  LogCenter.cs  Service.cs  User.cs  Warning.cs
Core/Public/Enums/: AccountOption.cs  AutoSaveMergeBehavior.cs  WarningType.cs
Core/Public/Events/: AutoSaveDetectedEventArgs.cs  LogoutEventArgs.cs  WarningDetectedEventArgs.cs
Core/Public/Interfaces/: IAccount.cs  ICryptographyCenter.cs  IDatabase.cs  IItem.cs  ILog.cs  IPasswordFactory.cs  IPasswordGenerator.cs  ISerializationCenter.cs  IService.cs  IUser.cs  IWarning.cs  Interfaces.cd
Core/Public/Utils/: ClipboardManager.cs  CryptographyCenter.cs  Exceptions.cs  JsonSerializationCenter.cs  PasswordFactory.cs  PasswordGenerator.cs  StaticMethods.cs
Core/Utils/: ActivityCenter.cs  ClipboardManager.cs  CryptographicCenter.cs  CryptographyCenter.cs  Exceptions.cs  FileLocker.cs  ImportExportHelper.cs  JsonSerializationCenter.cs  LogCenter.cs  PasswordFactory.cs  PasswordGenerator.cs  QrCode.cs  SecurityCenter.cs  SerializationCenter.cs  StaticMethods.cs
GUI/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MauiProgram.cs  Upsilon.Apps.Passkey.GUI.csproj
GUI/Helper/: EnumHelper.cs  HotKeyHelper.cs  IItemHelper.cs  NumericTextBoxHelper.cs  PropertyHelper.cs  QrCodeHelper.cs  WindowHelper.cs
GUI/MAUI/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Upsilon.Apps.Passkey.GUI.MAUI.csproj
GUI/OSSpecific/: ClipboardManager.cs
GUI/WPF/: App.xaml  (+4 more)
Interfaces/: IAccount.cs  IClipboardManager.cs  ICryptographyCenter.cs  IDatabase.cs  ILog.cs  IPasswordFactory.cs  ISerializationCenter.cs  IService.cs  IWarning.cs  Interfaces.cd  Upsilon.Apps.Passkey.Interfaces.csproj
UnitTests/: CMakeLists.txt  ClipboardManager.cs  SecurityCenterUnitTexts.cs  UnitTests.csproj  UnitTestsHelper.cs  Upsilon.Apps.PassKey.UnitTests.csproj  UserUnitTests.cs
UnitTests/Models/: AccountUnitTests.cs  DatabaseUnitTests.cs  ImportExportUnitTests.cs  ServiceUnitTests.cs  UserUnitTests.cs
UnitTests/TestFiles/: import.csv  import.json  import_MissingCollumn.csv  import_MissingHearder.csv  import_WrongFormat.json  import_blanckIdentifiant.json  import_blanckIdentifier.json  import_blanckService.csv  import_noData.csv
UnitTests/Utils/: CryptographyCenterUnitTexts.cs  SecurityCenterUnitTexts.cs
(+173 files in other folders)
